# eip-peltomappi

./: .gitattributes  .gitignore  .ignore  .pre-commit-config.yaml  1_esittely.html  2_projektin_lataaminen.html  3_kohteen_lisääminen.html  404.html  4_reitin_nauhoitus.html  5_penetrometri.html  8_saadata.html  README.md  alueen_jakaminen.html  alueen_lisääminen.html  esittely.html  index.html  karttanäkymä.html  kohteen_lisääminen.html  luonnostelu.html  mara_kuoppa.html  mittaus.html  mkdocs.yml  muut_ominaisuudet.html  muutosloki.html  objects.inv  palaute.html  peltolohkon_yhteenveto.html  peltomaahavainnot.html  peltomappi-1.0.2a0-py3-none-any.whl  penetrometri.html  projektin_lataaminen.html  projektin_lataaminen_QGISiin.html  pyproject.toml  python.html  reitin_nauhoitus.html  requirements.in  requirements.txt  saadata.html  salaojakarttojen_georeferointi.html  search.html  (+5 more)
.github/workflows/: code-style.yml  deploy-docs.yml  release.yml  tests.yml
docs/: 1_esittely.md  2_projektin_lataaminen.md  3_kohteen_lisääminen.md  4_alueen_lisääminen.md  4_reitin_nauhoitus.md  5_penetrometri.md  5_reitin_nauhoitus.md  6_penetrometri.md  7_mittaus.md  8_säädata.md  alueen_jakaminen.md  alueen_lisääminen.md  esittely.md  index.md  karttanäkymä.md  kohteen_lisääminen.md  luonnostelu.md  mara_kuoppa.md  mittaus.md  muut_ominaisuudet.md  muutosloki.md  palaute.md  peltolohkon_yhteenveto.md  peltomaahavainnot.md  penetrometri.md  projektin_lataaminen.md  projektin_lataaminen_QGISiin.md  python.md  reitin_nauhoitus.md  saadata.md  salaojakarttojen_digitointi.md  salaojakarttojen_georeferointi.md  selainkayttoliittyma.md  tietojen_tallentaminen_peltolohkolle.md  yleiset_asetukset.md
docs/overrides/partials/: copyright.html
docs/stylesheets/: extra.css
qgis/: eip-peltomappi.v.0.3.qgs
scripts/: split_project_and_upload.sh
search/: search_index.json
src/: README.md  pm.py
src/peltomappi/: __init__.py  __main__.py  composition.py  composition.schema.json  config.py  divider.py  downloader.py  exception.py  filter.py  logger.py  main.py  parcelspec.py  parcelspecification.schema.json  prefix.py  project.py  subproject.py  subproject.schema.json  subprojects.schema.json  utils.py  weather.py
src/peltomappi/cli/: composition.py  config.py  divide.py  project.py  utils.py  weather.py
stylesheets/: extra.css
test/: conftest.py  test_composition.py  test_config.py  test_divider.py  test_filter.py  test_parcelspec.py  test_project.py  test_subproject.py  test_utils.py
test/testdata/: config.json  field_parcel_config.gpkg  field_parcel_mock_ds.gpkg  fulldata.gpkg  peltomappi_subproject.json  test_composition_parcelspec_1.json  test_composition_parcelspec_2.json  test_composition_parcelspec_3.json  test_composition_subproject_1.json  test_composition_subproject_2.json  test_composition_subproject_3.json  test_parcelspec.json  test_subproject_1.json  test_subproject_3.json
test/testdata/expected/: config_gpkg.gpkg
test/testdata/test_full_data/: peltolohkot_2024.gpkg
test/testdata/test_saved_composition/: composition.json
test/testdata/test_subproject_with_data/: data.gpkg  peltomappi_subproject.json
test/utils/: classes.py  utils.py
theme/: main.html
theme/locales/fi/LC_MESSAGES/: messages.mo  messages.po
(+9 files in other folders)
