[project]
name = "eip_peltomappi"
requires-python = ">=3.12"
version = "1.0.0"
dependencies = [
    "click>=8.2.1",
    "gdal==3.8.4",
    "mkdocs-redirects>=1.2.2",
    "mkdocs[i18n]>=1.6.1",
    "tqdm==4.67.1",
]

[dependency-groups]

dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
]
lint = [
    "flake8>=7.3.0",
    "flake8-pyproject>=1.2.3",
    "flake8-spellcheck>=0.28.0",
    "mypy>=1.16.1",
    "ruff>=0.12.0",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.flake8]
spellcheck-targets = "names"
extend-ignore = [
    "E501",
]

[tool.mypy]
python_version = "3.12"
follow_imports = "normal"
show_column_numbers = true
explicit_package_bases = true
