[build-system]
requires = ["uv_build>=0.8.20,<0.9.0"]
build-backend = "uv_build"

[project]
name = "peltomappi"
requires-python = ">=3.12"
version = "1.0.0-alpha"
license = "EUPL-1.2"
readme = "README.md"
maintainers = [ { name = "Gispo Finland Ltd.", email = "info@gispo.fi" } ]
classifiers = ["Private :: Do Not Upload"] # mark private for now
dependencies = [
    "click>=8.1.3",
    "geopandas>=1.1.1",
    "jsonschema>=4.25.1",
    "mergin-client>=0.10.5",
]

[project.urls]
homepage = "https://gispocoding.github.io/eip-peltomappi"
repository = "https://github.com/GispoCoding/eip-peltomappi"

[project.scripts]
peltomappi = "peltomappi.__main__:cli"

[dependency-groups]
dev = [
    "freezegun>=1.5.5",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
]

docs = [
    "mkdocs-redirects>=1.2.2",
    "mkdocs-material>=9.6.18",
    "mkdocstrings-python>=0.30.0",
]

lint = [
    "flake8>=7.3.0",
    "flake8-pyproject>=1.2.3",
    "flake8-spellcheck>=0.28.0",
    "mypy>=1.16.1",
    "ruff>=0.12.0",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.flake8]
spellcheck-targets = "names"
extend-ignore = [
    "E501",
]

[tool.mypy]
python_version = "3.12"
follow_imports = "normal"
show_column_numbers = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["osgeo.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["test"]
pythonpath = [
    "src",
]
